[package]
name = "zkme-sbt"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-schema = "1.3.0"
cosmwasm-std = "1.3.0"
cw-storage-plus = "1.1.0"
cw-utils = "1.0.1"
cw2 = "1.1.0"
schemars = "0.8.12"
serde = { version = "1.0.173", default-features = false, features = ["derive"] }
thiserror = "1.0.43"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dev-dependencies]
cw-multi-test = "0.16.5"
